fix side bar overlap

--- a/style.css
+++ b/style.css
@@ -99,22 +99,31 @@ nav {
     position: fixed;
     top: 0;
     left: 0;
-    height: 100%;
+    height: 100vh;
     width: 220px;
     background-color: #685e7e;
-    padding: 1rem;
-    box-shadow: 0px 0px 10px #3e394c;
+    padding: 20px 15px;
     display: flex;
     flex-direction: column;
-    z-index: 1000;
+    justify-content: space-between;
+    box-sizing: border-box;
+}
+.container {
+    margin-left: 240px;
+    padding: 20px;
 }
 nav ul {
-    list-style-type: none;
+    list-style: none;
     padding: 0;
-    margin: 0;
+    margin: 40px 0;
+    display: flex;
+    flex-direction: column;
+    gap: 15px;
 }
 nav ul li {
-    margin: 0.5rem 0;
+    text-decoration: none;
+    color: white;
+    font-size: 18px;
 }
 nav ul li a {
     font-family: 'Mansalva', sans-serif;
@@ -132,12 +141,11 @@ nav ul li a.active {
     color: #EFE9E7;
     box-shadow: 0px 0px 10px #3e394c;
 }
-.icons {
+nav .icons {
     display: flex;
-    gap: 1rem;
-    justify-content: center;
+    gap: 15px;
     margin-top: auto;
-    margin-bottom: 2rem;
+    padding-top: 20px;
 }
 .icon-link {
     color: #EFE9E7;
